--- a/receptor/index.html
+++ b/receptor/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="white">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Dark status bar for dark mode -->
+    <meta name="theme-color" content="white"> <!-- White status bar for light mode -->
     <title>Receptor</title>
     <style>
         body, html {
@@ -20,7 +20,7 @@
 
         #header, #footer {
             width: 100%;
-            height: 60px;
+            height: 60px; /* Header/footer height */
             position: fixed;
             left: 0;
             z-index: 10;
@@ -29,24 +29,24 @@
         }
 
         #header {
-            top: -13px;
-            margin-top: 0;
-        }
-
+    top: -13px; /* Move header 10px upwards */
+    margin-top: 0; /* Remove any unwanted space above */
+}
+        /* Move header and footer closer to top/bottom */
         #footer {
-            bottom: 15px;
-            margin-bottom: 20px;
-        }
+    bottom: 15px; /* Move footer 20px upwards */
+    margin-bottom: 20px; /* Remove unwanted space below footer */
+     }
 
         canvas {
             display: block;
             width: 100%;
-            height: 100%;
+            height: 100%; /* Full screen */
             position: fixed;
             top: 0;
             left: 0;
             background-color: transparent;
-            z-index: 1;
+            z-index: 1; /* Ensure it stays behind header/footer */
         }
     </style>
 </head>
@@ -59,18 +59,23 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
 
+        // Resize canvas to full screen
         function resizeCanvas() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
         }
 
         resizeCanvas();
+
+        // Adjust canvas size on window resize
         window.addEventListener('resize', resizeCanvas);
 
+        // Detect Dark Mode
         function isDarkMode() {
             return window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
         }
 
+        // Update Header and Footer Images based on Mode
         function updateHeaderFooter() {
             const header = document.getElementById('header');
             const footer = document.getElementById('footer');
@@ -78,13 +83,16 @@
                 header.style.backgroundImage = 'url("dark-header.png")';
                 footer.style.backgroundImage = 'url("dark-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black');
+                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'black-translucent');
             } else {
                 header.style.backgroundImage = 'url("light-header.png")';
                 footer.style.backgroundImage = 'url("light-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white');
+                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'default');
             }
         }
 
+        // Update Canvas style based on Dark Mode
         function updateCanvasStyle() {
             if (isDarkMode()) {
                 canvas.style.backgroundColor = 'black';
@@ -95,42 +103,43 @@
             }
         }
 
+        // Initialize header/footer styles based on the current mode
         updateHeaderFooter();
         updateCanvasStyle();
 
+        // Listen for changes in color scheme
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
             updateHeaderFooter();
             updateCanvasStyle();
         });
 
-        // Erasing functionality (using touch events)
-        let isErasing = false;
+        async function fetchDibujo() {
+            try {
+                const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
+                const path = await response.json();
+                console.log(path);
 
-        function startErase(event) {
-            isErasing = true;
-            erase(event);
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                if (path.length === 0) return;
+                ctx.beginPath();
+
+                path.forEach((point) => {
+                    if (point.move) {
+                        ctx.moveTo(point.x, point.y);
+                    } else {
+                        ctx.lineTo(point.x, point.y);
+                        ctx.lineWidth = point.width || 2;
+                    }
+                });
+
+                ctx.stroke();
+            } catch (error) {
+                console.error('Error al obtener el dibujo:', error);
+            }
         }
 
-        function stopErase() {
-            isErasing = false;
-        }
-
-        function erase(event) {
-            if (!isErasing) return;
-
-            const touch = event.touches[0];
-            const x = touch.clientX;
-            const y = touch.clientY;
-
-            // Clear the area around the touch point
-            ctx.clearRect(x - 20, y - 20, 40, 40); // Erase in a 40x40 px area
-        }
-
-        // Add touch event listeners with passive set to true
-        canvas.addEventListener('touchstart', startErase, { passive: true });
-        canvas.addEventListener('touchmove', erase, { passive: true });
-        canvas.addEventListener('touchend', stopErase);
-        canvas.addEventListener('touchcancel', stopErase);
+        // Periodically fetch drawing data
+        setInterval(fetchDibujo, 2000);
     </script>
 </body>
 </html>
