--- a/receptor/index.html
+++ b/receptor/index.html
@@ -29,12 +29,11 @@
         }
 
         #header {
-            top: -13px; /* Adjust as needed to remove the space */
+            top: 0; /* Ensures header is at the very top */
             margin-top: 0; /* Remove any unwanted space above */
-            background-color: transparent; /* Ensure it's transparent for light mode */
+            padding-top: 0; /* Remove any padding */
         }
 
-        /* Move header and footer closer to top/bottom */
         #footer {
             bottom: 15px; /* Move footer 20px upwards */
             margin-bottom: 20px; /* Remove unwanted space below footer */
@@ -49,6 +48,11 @@
             left: 0;
             background-color: transparent;
             z-index: 1; /* Ensure it stays behind header/footer */
+        }
+
+        body.dark-mode, html.dark-mode {
+            margin-top: 0;
+            padding-top: 0;
         }
     </style>
 </head>
@@ -87,12 +91,14 @@
                 footer.style.backgroundImage = 'url("dark-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black');
                 document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'black-translucent');
+                document.body.classList.add('dark-mode');
             } else {
                 header.style.backgroundImage = 'url("light-header.png")';
                 header.style.backgroundColor = 'transparent'; // Ensure it's transparent for light mode
                 footer.style.backgroundImage = 'url("light-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white');
                 document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'default');
+                document.body.classList.remove('dark-mode');
             }
         }
 
