--- a/receptor/index.html
+++ b/receptor/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Translucent status bar -->
-    <meta name="theme-color" content="transparent"> <!-- Transparent theme color for mobile browsers -->
-    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Enable full-screen mode for PWAs -->
+    <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="transparent">
     <title>Receptor</title>
     <style>
         body, html {
@@ -21,7 +22,7 @@
 
         #header, #footer {
             width: 100%;
-            height: 60px; /* Header/footer height */
+            height: 60px;
             position: fixed;
             left: 0;
             z-index: 10;
@@ -30,24 +31,24 @@
         }
 
         #header {
-            top: -13px; /* Move header 10px upwards */
-            margin-top: 0; /* Remove any unwanted space above */
+            top: 0;
+            padding-top: env(safe-area-inset-top, 20px); /* Safe area for iPhone notch */
         }
-        /* Move header and footer closer to top/bottom */
+
         #footer {
-            bottom: 15px; /* Move footer 20px upwards */
-            margin-bottom: 20px; /* Remove unwanted space below footer */
+            bottom: 15px;
+            padding-bottom: env(safe-area-inset-bottom, 20px); /* Safe area at the bottom */
         }
 
         canvas {
             display: block;
             width: 100%;
-            height: 100%; /* Full screen */
+            height: 100%;
             position: fixed;
             top: 0;
             left: 0;
             background-color: transparent;
-            z-index: 1; /* Ensure it stays behind header/footer */
+            z-index: 1;
         }
     </style>
 </head>
@@ -84,12 +85,10 @@
                 header.style.backgroundImage = 'url("dark-header.png")';
                 footer.style.backgroundImage = 'url("dark-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black');
-                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'black-translucent');
             } else {
                 header.style.backgroundImage = 'url("light-header.png")';
                 footer.style.backgroundImage = 'url("light-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white');
-                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'default');
             }
         }
 
@@ -104,11 +103,8 @@
             }
         }
 
-        // Initialize header/footer styles based on the current mode
         updateHeaderFooter();
         updateCanvasStyle();
-
-        // Listen for changes in color scheme
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
             updateHeaderFooter();
             updateCanvasStyle();
@@ -118,8 +114,6 @@
             try {
                 const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
                 const path = await response.json();
-                console.log(path);
-
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 if (path.length === 0) return;
                 ctx.beginPath();
@@ -135,11 +129,10 @@
 
                 ctx.stroke();
             } catch (error) {
-                console.error('Error al obtener el dibujo:', error);
+                console.error('Error fetching drawing:', error);
             }
         }
 
-        // Periodically fetch drawing data
         setInterval(fetchDibujo, 2000);
     </script>
 </body>
